editor pyscript loading

--- a/levels/tutorial.yaml
+++ b/levels/tutorial.yaml
@@ -1,7 +1,13 @@
 name: "Tutorial"
 tilemap_layout: |-
-    G
-    O
-    P
+  G
+  O
+  P
 pyscript: |
+  """
+  Welcome to PyScript !
+  
+  blablalablablblablablabablajnkjlswnkflnabw erclkgqlirgb
+  """
+  
   hello_world()
