--- a/levels/test.yaml
+++ b/levels/test.yaml
@@ -1,9 +1,8 @@
 name: "Test"
+pyscript_path: "pyscript/test.pyscript"
 tilemap_layout: |-
   GOOOO
   XXXXO
   OOOXO
   OXOXO
   PXOOO
-pyscript: |
-  hello_world()
